Went through the warnings, cleaned up the code.